--- a/less/content.less
+++ b/less/content.less
@@ -905,7 +905,7 @@
  */
 .view-reaching-city-civicrm-event-price {
   h3 {
-    margin: 0;
+    margin: 0 !important;
 
     .Radio,
     .CheckBox,
